# aws-data-pipeline

./: .env.example  .env.localstack  .gitignore  README.md  build.sh  docker-compose.localstack.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  aws-credentials.md  cloud-demo.md  commands.md  cost.md  local-testing.md  troubleshooting.md
frontend/: index.html
glue/jobs/: transform_job.py
lambda_ingest/: handler.py
lambda_query/: handler.py  requirements.txt
localstack/init/: ready.sh
scripts/: bootstrap-tf-backend.sh  mock_api.py
terraform/: api_gateway.tf  frontend.tf  main.tf  outputs.tf  providers.tf  query_lambda.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/integration/: test_s3_pipeline.py
tests/smoke/: test_smoke.py
tests/unit/: test_handler.py  test_ingest.py  test_query_handler.py  test_transform.py
